--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-speech-recognition": "^3.9.0",
