--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-firebase-hooks": "^3.0.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-siriwave": "^2.1.0",
     "react-speech-recognition": "^3.9.0",
     "web-vitals": "^1.1.2"
   },
